# image-caption-generation

./: .gitignore  imct-resnet-fasttext.ipynb  pyproject.toml  requirements.txt
